<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@android:color/black"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@android:color/white"
            android:textSize="20sp"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="40dp"
            android:padding="@dimen/activity_horizontal_margin">
            <Button
                android:id="@+id/btn_level"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onSelectLevel"
                android:text="@string/level"/>
            <Button
                android:id="@+id/btn_rank"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/btn_level"
                android:onClick="onClickRank"
                android:text="@string/rank"/>
            <Button
                android:id="@+id/btn_first_click_setting"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/btn_rank"
                android:onClick="onClickFirstClickSetting"
                android:text="@string/first_click"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_gravity="bottom"
                android:onClick="onClickStart"
                android:text="@string/start_game"/>
        </RelativeLayout>
    </FrameLayout>
</layout>
